# raspidev

IRIS_project_IDS_RASPI/: CMakeLists.txt  TimeStamp.cc  TimeStamp.h  Video.Camera.cc  Video.Camera.h  Video.IDSCamera.cc  Video.IDSCamera.h  Video.IDSConfigFileTemplate copie.h  Video.IDSConfigFileTemplate.h  Video.Image.cc  Video.Image.h  camera_config_downloaded.ini  confCameraIDS_UI_3581LE_848x640_17fps.ini  main.cpp  main.iris.h  main.visage.h  my_app.h
